# scene-todo

./: .gitignore  CHANGELOG.md  CLAUDE.md  FIX_PLAN.md  README.md  git-push-final.ps1  index.html  package-lock.json  package.json  pin.html  vite.config.ts  widget.html
.github/workflows/: release.yml
e2e/: package-lock.json  package.json  wdio.conf.ts
e2e/specs/: calendar.spec.ts  group.spec.ts  recurrence-reminders.spec.ts  scene.spec.ts  search-filter.spec.ts  settings.spec.ts  smart-views.spec.ts  tag.spec.ts  todo-crud.spec.ts  todo.spec.ts
scripts/: generate-icons.py  version-bump.mjs
src/: App.tsx  index.css  main.tsx  pin-entry.tsx  widget-entry.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql  002_scene_tracking.sql  003_show_widget.sql  004_current_session.sql  005_recurrence_reminders.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app_cmd.rs  data_cmd.rs  group_cmd.rs  mod.rs  recurrence_cmd.rs  reminder_cmd.rs  scene_cmd.rs  tag_cmd.rs  todo_cmd.rs
src-tauri/src/models/: app.rs  group.rs  mod.rs  recurrence.rs  reminder.rs  scene.rs  tag.rs  todo.rs
src-tauri/src/services/: app_repo.rs  data_port.rs  db.rs  group_repo.rs  icon_extractor.rs  import_validator.rs  mod.rs  process_matcher.rs  recurrence_repo.rs  reminder_repo.rs  reminder_scheduler.rs  rrule_service.rs  scene_repo.rs  tag_repo.rs  time_tracker.rs  todo_repo.rs  widget_manager.rs  window_monitor.rs
src/components/: ErrorBoundary.tsx
src/hooks/: useApps.ts  useGroups.ts  usePageVisibility.ts  (+6 more)
(+64 files in other folders)
